--- a/biblias.html
+++ b/biblias.html
@@ -61,6 +61,10 @@
                 font-size: 20px;
             }
         }
+        a{
+            text-decoration: none;
+            color: black;
+        }
     </style>
 </head>
 <body>
