--- a/index.html
+++ b/index.html
@@ -101,6 +101,10 @@
         left: 100px;
         position: absolute;
       }
+      a{
+        text-decoration: none;
+        color: black;
+      }
     }
   </style>
 </head>
