--- a/versiculo.html
+++ b/versiculo.html
@@ -51,6 +51,10 @@
             .imgs img {
                 margin: 10px 0;
             }
+            a{
+                text-decoration: none;
+                color: black;
+            }
         }
     </style>
 </head>
